code/k8s/011/network-policy/egress/network-policy-pod-selector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: network
spec:
  podSelector:
    matchLabels: # 匹配作用的 Pod 标签
      env: prod
  policyTypes:
  - Egress
  egress:                   # 出站网络策略
    - to:
        - podSelector:
            matchLabels:    # 只能访问标签为 env: dev 的Pod
              env: dev
      ports:
        - protocol: TCP     # 只能访问端口 80，且协议为TCP
          port: 80
